# polish-election-calculator

./: .gitattributes  LICENSE  README.md
backend/: pyproject.toml
docs/: ARCHITECTURE.md  CONCEPT.md
frontend/: .prettierrc.json  package-lock.json  package.json
frontend/.husky/: pre-commit
research/: polling_districts.ipynb  spatial_aggregation.ipynb
scripts/: .gitignore  interpolate.py
scripts/geocoder/: pyproject.toml
scripts/geocoder/src/: config.py  coords_finder.py  geocoder.py  main.py  validate_points.py  writer.py
