[project]
name = "polish-election-calculator-backend"
version = "0.1.0"
description = "Polish Election Calculator Backend API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.2",
]

[dependency-groups]
dev = [
    "coverage>=7.13.3",
    "mypy>=1.19.1",
    "prek>=0.3.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.mypy]
strict = true
exclude = [".venv"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"


[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
